[project]
name = "flake518"
version = "1.0.0"
description = "A small wrapper around flake8 to support PEP518 pyproject.toml as configuration file."
authors = [
    {name = "Carsten Igel", email = "cig@bite-that-bit.de"},
]
dynamic = ["classifiers"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Environment :: Console",
        "Framework :: Flake8",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Software Development :: Quality Assurance",
        "Typing :: Typed",
]
dependencies = [
    "toml~=0.10",
    "flake8~=3.9",
]
requires-python = ">=3.6, <4"
license = {text = "MIT", file="LICENSE"}
keywords = ""
readme = "README.md"

[project.scripts]
flake518 = "flake518.__main__:main"

[project.urls]
homepage = "https://github.com/carstencodes/flake518"

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest~=6.2",
    "pytest-cov~=2.12",
]
edit = [
    "mypy~=0.910",
    "black~=20.8b1"]
lint = [
    "pylint~=2.9",
    "pydocstyle~=6.1",
]

[tool.black]
line-length=79
target-version=['py38']

[tool.flake8]
statistics=true
show-source=true
max-line-length=79
doctests=true
# exclude=[".git", "__pypackages__", ".vscode", ".mypy_cache"]
