[project]
name = "flake518"
version = "1.4.0"
description = "A small wrapper around flake8 to support PEP518 pyproject.toml as configuration file."
authors = [
    {name = "Carsten Igel", email = "cig@bite-that-bit.de"},
]
dynamic = ["classifiers"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Environment :: Console",
        "Framework :: Flake8",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Software Development :: Quality Assurance",
        "Typing :: Typed",
]
dependencies = [
    "tomli>=0.10.2; python_version<'3.11'",
    "flake8>=3.0.0",
]
requires-python = ">=3.9, <4"
license = {file="LICENSE"}
keywords = [] 
readme = "README.md"

[project.scripts]
flake518 = "flake518.__main__:main"

[project.urls]
homepage = "https://github.com/carstencodes/flake518"

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.3",
    "pytest-cov>=3.0.0",
]
edit = [
    "mypy>=0.971",
    "black>=22.8.0",
]
lint = [
    "pylint>=2.15.2",
    "pydocstyle>=6.1.1",
]
release = [
    "pdm-bump>=0.5.0",
]

[tool.black]
line-length=79
target-version=['py38']

[tool.flake8]
statistics=true
show-source=true
max-line-length=79
doctests=true
exclude=[".git", "__pypackages__", ".vscode", ".mypy_cache"]
